# Alphabata_ws

./: README.md  start.sh
install/: local_setup.sh  setup.sh
install/AAAmodel/lib/AAAmodel/: tactical_ai  yolo_detector
install/AAAmodel/share/AAAmodel/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/AAAmodel/share/AAAmodel/launch/: start_game.launch.py
log/: latest_build
